--- a/index.html
+++ b/index.html
@@ -138,11 +138,12 @@
            c-0.6,0-1.12,0.19-1.55,0.58c-0.32,0.28-0.55,0.7-0.71,1.27H84.11z" />
             </g>
         </svg>
-        <a href="contact.html">Contact Us</a>
-        <a href="#">Cruises</a>
-        <a href="#">Rediscover Singapore</a>
-        <a href="package.html">Package Tours</a>
-        <a href="index.html">Home</a>
+        <a href="hamburger.html" class="mobile-nav"> <i class="fa-solid fa-bars" style="font-size: 40px; color: #ffffff; margin-right: 10px;"></i> </a>
+        <a class="web-nav" href="contact.html">Contact Us</a>
+        <a class="web-nav" href="#">Cruises</a>
+        <a class="web-nav" href="#">Rediscover Singapore</a>
+        <a class="web-nav" href="package.html">Package Tours</a>
+        <a class="web-nav" href="index.html">Home</a>
     </nav>
 
     <div class="video-container">
@@ -156,7 +157,7 @@
     </div>
 
     <section>
-        <div class="container">
+        <div class="card-container">
             <div class="card taj-mahal">
                 <div class="card-inner">
                     <div class="card-front">
